--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:css": "postcss tailwind.css -o src/theme/tailwind.css",
+    "watch:css": "postcss tailwind.css -o src/theme/tailwind.css -w",
+    "start:dev": "yarn watch:css & ionic serve"
   },
   "dependencies": {
+    "@capacitor/android": "5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.3.0",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.3.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
@@ -32,14 +37,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^20.5.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.15",
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
